<resources>
    <string name="app_name">Toss</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">홈</string>
    <string name="notification">알림</string>
    <string name="see_my_profile">내 프로필 보기</string>
    <string name="remit">송금</string>
    <string name="my_balance_account">%,d 원</string>
    <string name="send_limit_account">1일 최대 %,d원</string>
    <string name="bank_logo">은행 로고</string>
    <string name="account">계좌</string>
    <string name="welcome_message">간편한 금융생활,\n토스로 시작해요</string>
    <string name="login">로그인</string>
    <string name="dont_you_have_account">또는 계정이 없다면?</string>
    <string name="register">회원가입</string>
    <string name="id">아이디</string>
    <string name="name">이름</string>
    <string name="pw">비밀번호</string>
    <string name="check_conflict">중복확인</string>
    <string name="social_security_number_first_6">주민번호 앞자리</string>
    <string name="social_security_number_second_6">주민번호 뒷자리</string>
    <string name="social_security_number_second_1">뒷자리 맨 앞 번호</string>
    <string name="email">이메일</string>
    <string name="next">다음</string>
    <string name="register_first_title_input_info">정보를 입력하세요.</string>
    <string name="register_second_title_input_info">정보 입력이 거의 끝났어요.</string>
    <string name="register_title_check_input_info">입력한 정보를 확인해주세요.</string>
    <string name="please_set_name">이름을 입력해 주세요.</string>
    <string name="please_set_id">아이디는 길이 3–12자 이내로, 문자와 숫자가 포함되어야 합니다.</string>
    <string name="please_set_birth">생년월일을 6자리로 정확히 입력해 주십시오.</string>
    <string name="please_set_email">올바른 이메일 형식으로 입력해 주세요.</string>
    <string name="please_set_security_code">잘못된 형식입니다.</string>
    <string name="nickname">닉네임</string>
    <string name="please_set_nickname">닉네임은 2글자 이상 입력해주세요.</string>
    <string name="pwCheck">비밀번호 확인</string>
    <string name="phone">전화번호</string>
    <string name="please_set_pw">비밀번호는 영어, 숫자, 특수문자를 포함하여 8-12자이어야 합니다.</string>
    <string name="password_is_not_equal">비밀번호가 맞지 않습니다.</string>
    <string name="setting_pin_number">간편인증번호 설정</string>
    <string name="please_set_security_number">주민번호 뒷자리를 정확히 입력해 주세요.</string>
    <string name="exist_check">중복체크</string>
    <string name="account_name">계좌 이름</string>
</resources>