<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="ks.hs.dgsw.toss.ui.viewmodel.activity.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motion_layout_sign_up"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        app:layoutDescription="@xml/fragment_sign_up_scene"
        tools:context=".ui.view.fragment.SignUpFirstFragment">

        <TextView
            android:id="@+id/tv_title_sign_up"
            style="@style/TextViewBoldBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/sign_up_title_input_info"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name_sign_up"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/name"
            app:errorEnabled="@{vm.nameError.length() != 0}"
            app:setError="@{vm.nameError}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_sign_up">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name_sign_up"
                android:text="@={vm.name}"
                android:inputType="textPersonName"
                style="@style/DefaultTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <requestFocus/>
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linear_layout_id_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_name_sign_up">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_id_sign_up"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/id"
                app:errorEnabled="@{vm.idError.length() != 0}"
                app:setError="@{vm.idError}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_id_sign_up"
                    android:text="@={vm.id}"
                    android:inputType="text"
                    style="@style/DefaultTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_id_chk_conflict_sign_up"
                style="@style/RegularButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/check_conflict" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_social_security_number_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_id_sign_up">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_ssn_first_sign_up"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:hint="@string/social_security_number_first_6"
                app:errorEnabled="@{vm.birthError.length() != 0}"
                app:setError="@{vm.birthError}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_ssn_first_sign_up"
                    style="@style/DefaultTextInputEditText"
                    android:letterSpacing="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="@={vm.birth}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="-"
                android:textSize="30sp"
                android:layout_marginHorizontal="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_ssn_second_sign_up"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:hint="@string/social_security_number_second_1"
                app:errorEnabled="@{vm.securityCodeError.length() != 0}"
                app:setError="@{vm.securityCodeError}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_ssn_second_sign_up"
                    android:inputType="number"
                    android:letterSpacing="1"
                    android:text="@={vm.securityCode}"
                    android:gravity="center"
                    style="@style/DefaultTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email_sign_up"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            app:errorEnabled="@{vm.email.length() != 0}"
            app:setError="@{vm.emailError}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_social_security_number_sign_up">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email_sign_up"
                android:text="@={vm.email}"
                android:inputType="textWebEmailAddress"
                style="@style/DefaultTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_up"
            style="@style/BigButton"
            android:text="@string/next"
            android:onClick="@{() -> vm.toSecondFragment()}"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>