<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="ks.hs.dgsw.toss.ui.viewmodel.fragment.AddOtherBankAccountFirstViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.view.fragment.AddOtherBankAccountFirstFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_add_other_bank_first_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title_add_other_bank_second_account"
            style="@style/TextViewBoldBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="계좌 추가를 위한 \n정보를 입력해주세요."
            android:textSize="25sp"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_add_other_bank_first_account" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_account_name_add_other_bank_account"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_add_other_bank_second_account">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_account_name_add_account"
                style="@style/DefaultTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@={vm.name}">

                <requestFocus />
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linear_layout_social_security_number_add_otherbank_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="30dp"
            android:gravity="top|center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_account_name_add_other_bank_account">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_ssn_first_add_other_bank_account"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/social_security_number_first_6">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_ssn_first_add_other_bank_account"
                    style="@style/DefaultTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:letterSpacing="0.7"
                    android:maxLength="6"
                    android:text="@={vm.securityNumberFirst}"
                    android:textAlignment="center"
                    tools:text="040809" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:gravity="center"
                android:text="-"
                android:textSize="30sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_ssn_second_add_other_bank_account"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/social_security_number_second_6">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_ssn_second_add_other_bank_account"
                    style="@style/DefaultTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"
                    android:letterSpacing="0.7"
                    android:maxLength="7"
                    android:text="@={vm.securityNumberSecond}"
                    android:textAlignment="center"
                    tools:text="1234567" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next_add_other_bank_account"
            style="@style/BigButton"
            android:text="@string/next"
            android:layout_margin="30dp"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:enabled="false"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>